update readme + fix typos in prz-1

--- a/prz-1/03-task-linear-algebra/01-linear-algebra.ipynb
+++ b/prz-1/03-task-linear-algebra/01-linear-algebra.ipynb
@@ -1344,7 +1344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для тензора произвольной формы функция вычисляет его норм Фробениуса."
+    "Для тензора произвольной формы функция вычисляет его норму Фробениуса."
    ]
   },
   {
@@ -1420,7 +1420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вычисление произведения в порядке `A(BC)` занимается значительно больше времени и памяти. Это связано с тем, что при таком порядке выполнения вычислений промежуточное произведение имеет размерность $2^{16} \\times 2^{16}$, а не $2^{10} \\times 2^{5}$ (при выполнении в порядке `(AB)C`), что значительно повышает количество производимых вычислений. То же самое можно сказать и про второе действие."
+    "Вычисление произведения в порядке `A(BC)` занимает значительно больше времени и памяти. Это связано с тем, что при таком порядке выполнения вычислений промежуточное произведение имеет размерность $2^{16} \\times 2^{16}$, а не $2^{10} \\times 2^{5}$ (при выполнении в порядке `(AB)C`), что значительно повышает количество производимых вычислений. То же самое можно сказать и про второе действие."
    ]
   },
   {
